@@ -1,4 +1,7 @@
 0.4.1
+features/changes:
+ * new option in runfile for select lags to run, this can be 0, 1 and/or 2, 
+   combination of these or default (this is all).
 bugfixes:
  * fix check and default value for process period in runfile
  * fix console message for graphics process, enable/disable activation
